:lipstick: Text elements now have word-break explicitly set to prevent overflow on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,7 @@ p {
 /* Improve readability - uses em to allow for variable font size */
 h1, h2, h3, h4, h5, h6, p, ul, ol, dl, address{
     line-height: 1.5em;
+    word-break: break-word;
 }
 
 /* General fixes */
